src/app/main.scss
@import "./_variables.scss";
@import "./_typography.scss";
@import url(https://api.fontshare.com/v2/css?f[]=satoshi@900,700,500,300,400&display=swap);

body {
  background: $base;
  color: $text-primary;
  position: relative;
}

.main {
  overflow-x: hidden;
}

.image-container {
  width: 100%;

  > div {
    position: unset !important;
  }

  .image {
    object-fit: contain;
    width: 100% !important;
    position: relative !important;
    height: unset !important;
  }
}

.section {
  &__title {
    font-style: normal;
    font-weight: 400;
    font-size: $fz-xs;
    text-transform: uppercase;
    line-height: 28px;
    padding-bottom: $padding-xs;
    border-bottom: 1px solid rgba(#fff, 0.15);
  }
}

.button {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: $padding-xxs;
  padding: $padding-sm $padding-md;
  border-radius: 10px;
  letter-spacing: 0.75px;
  @include txt-small;
  transition: $transition-1;
  min-height: 36px;
  min-width: 135px;

  &_theme {
    &_primary {
      background: $primary;
      border: 1px solid #9746ff;

      &:hover {
        background: #8525ff;
        border: 1px solid #9746ff;
      }

      &:active {
        background: #8525ff;
        border: 1px solid #9746ff;
      }
    }

    &_secondary {
      border: 1px solid #2a273c;
      background: #1c192a;

      &:hover {
        background: #27223c;
      }

      &:active {
        background: $primary;
      }
    }

    &_text {
      border: 1px solid transparent;
      background: transparent;

      &:hover {
        background: rgba(136, 114, 188, 0.04);
      }

      &:active {
        background: rgba(170, 103, 255, 0.08);
        border: 1px solid rgba(170, 103, 255, 0.12);
      }
    }
  }
}

.header {
  box-sizing: border-box;
  padding: 12px 24px 12px 18px;
  background: rgba(14, 10, 24, 0.3);
  backdrop-filter: blur(10px);
  border-bottom: 1px solid rgba(#fff, 0.15);
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 60px;
  position: relative;
  z-index: 2;
  position: sticky;
  top: 0;
  left: 0;

  &__right {
    display: flex;
    align-items: center;
    gap: $padding-lg;
  }

  &__burger {
    cursor: pointer;
  }
}

.mobile-menu {
  z-index: 1;
  position: fixed;
  top: 60px;
  left: 0;
  padding: 60px 35px;
  background: rgba(16, 12, 26, 0.9);
  backdrop-filter: blur(7.5px);
  width: 100%;
  min-height: calc(100vh - 60px);
  transform: translateY(-300px);
  opacity: 0;
  visibility: hidden;
  pointer-events: none;
  transition: $transition-1;

  &_open {
    transform: translateY(0);
    opacity: 1;
    visibility: visible;
    pointer-events: all;
  }

  &__nav {
    display: flex;
    flex-direction: column;
    gap: $padding-lg;

    &-link {
      transition: $transition-1;
      @include txt-medium;
      text-transform: uppercase;

      &:hover {
        color: $primary;
      }
    }
  }
}

.main {
  padding: 20px;
}

.intro {
  padding-top: $padding-llg;
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 280px;
  margin: 0 auto;
  text-align: center;

  &__title {
    font-family: $font-secondary;
    font-style: normal;
    font-size: 56px;
    line-height: 60px;
    letter-spacing: -2px;
    text-transform: uppercase;

    span {
      &:nth-of-type(1) {
        font-weight: 300;
      }

      &:nth-of-type(2) {
        font-weight: 500;
      }

      &:nth-of-type(3) {
        font-style: italic;
        font-weight: 900;
      }
    }
  }

  &__descr {
    padding-top: $padding-default;
    font-style: normal;
    font-weight: 400;
    font-size: $fz-default;
    line-height: 24px;
    color: $text-secondary;
  }

  &__actions {
    width: 100%;
    margin-top: $padding-llg;
    display: flex;
    flex-direction: column;
    gap: $padding-lg;
  }

  &__button {
    width: 100%;
  }
}

.products {
  margin-top: 54px;
  position: relative;

  &__img {
    margin: 0 auto;
    margin-top: $padding-lg;
    position: relative;
    z-index: 1;
  }

  &__gradient {
    background: #3f2471;
    filter: blur(200px);
    border-radius: 9999px;
    width: 612px;
    height: 473px;
    position: absolute;
    top: 0;
    left: calc(50% - 306px);
  }
}

